--- a/sephora-landing-page.html
+++ b/sephora-landing-page.html
@@ -35,21 +35,21 @@
           </div>
         </div>
         <img
-          src="/playground_assets/image3838-nx07-200h.png"
-          alt="image3838"
+          src="https://github.com/Kasei7/Sephora-spec-/blob/main/image%203.png?raw=true"
+          alt=Red lips
           class="sephora-landing-page-image3"
         />
         <div class="sephora-landing-page-lip-image"></div>
         <div class="sephora-landing-page-lipstick">
           <div class="sephora-landing-page-frame1"></div>
           <img
-            src="/playground_assets/image2731-uhp3h-400h.png"
-            alt="image2731"
+            src="https://github.com/Kasei7/Sephora-spec-/blob/main/Lipstick.png?raw=true"
+            alt="Lipstick"
             class="sephora-landing-page-image2"
           />
         </div>
         <img
-          src="/playground_assets/logo103-fa1s-200h.png"
+          src="https://github.com/Kasei7/Sephora-spec-/blob/main/Logo.png?raw=true"
           alt="Logo103"
           class="sephora-landing-page-logo"
         />
