Update and rename desktop4.html to index.html

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     
     <div>
-        <link href="./desktop4.css" rel="stylesheet" />
+        <link href="./index.css" rel="stylesheet" />
         <div>
-          <div class="desktop4-desktop4">
-            <div class="desktop4-group36">
-              <div class="desktop4-group35">
-                <div class="desktop4-group9">
-                  <div class="desktop4-home-page">
-                    <div class="desktop4-frame1">
-                      <div class="desktop4-frame2">
+          <div class="index-desktop4">
+            <div class="index-group36">
+              <div class="index-group35">
+                <div class="index-group9">
+                  <div class="index-home-page">
+                    <div class="index-frame1">
+                      <div class="index-frame2">
                         <img
                           src="https://github.com/Kasei7/Sephora-spec-/blob/main/phoenix.png?raw=true"
                           alt="Phoenix"
-                          class="desktop4-image1"
+                          class="index-image1"
                         />
                         
 
