--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div>
     <link href="./index.css" rel="stylesheet" />
     <div>
-      <div class="index-index">
+      <div class="index-desktop4">
         <div class="index-group36">
           <div class="index-group35">
             <div class="index-group9">
@@ -19,7 +19,7 @@
                   <div class="index-frame2">
                     <img
                       alt="image1218"
-                      src="https://github.dev/Kasei7/Sephora-spec-/blob/main/phoenix.png"
+                      src="https://github.com/Kasei7/Sephora-spec-/blob/main/phoenix.png?raw=true"
                       class="index-image1"
                     />
                     <div class="index-frame14">
