--- a/index.html
+++ b/index.html
@@ -1,39 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <div>
-    <link href="./index.css" rel="stylesheet" />
-    <div>
-      <div class="index-desktop4">
-        <div class="index-group36">
-          <div class="index-group35">
-            <div class="index-group9">
-              <div class="index-home-page">
-                <div class="index-frame1">
-                  <div class="index-frame2">
-                    <img
-                      alt="image1218"
-                      src="https://github.com/Kasei7/Sephora-spec-/blob/main/phoenix.png?raw=true"
-                      class="index-image1"
-                    />
-                    <div class="index-frame14">
-                      <span class="index-text"><span>UX WRITER</span></span>
+    
+</body>
+</html>
+<div>
+    <link href="./indexhtml.css" rel="stylesheet" />
+    <div class="indexhtml-container">
+      <div class="indexhtml-sephora-landing-page">
+        <div class="indexhtml-group14">
+          <div class="indexhtml-landing-page">
+            <div class="indexhtml-frame1">
+              <div class="indexhtml-frame2">
+                <div class="indexhtml-group19">
+                  <div class="indexhtml-group22">
+                    <div class="indexhtml-group24">
+                      <div class="indexhtml-group18">
+                        <div class="indexhtml-lipstick">
+                          <div class="indexhtml-frame11"></div>
+                        </div>
+                        <div class="indexhtml-group25">
+                          <div class="indexhtml-group26">
+                            <div class="indexhtml-group15">
+                              <div class="indexhtml-group17">
+                                <div class="indexhtml-sephora-landing-page1">
+                                  <div></div>
+                                  <div class="indexhtml-frame4"></div>
+                                  <div class="indexhtml-black-background">
+                                    <div class="indexhtml-can-spam">
+                                      <span class="indexhtml-text">
+                                        <span>
+                                          <span>You can unsubscribe here</span>
+                                          <br />
+                                          <span>
+                                            1234 Elm street, Freddy Krugar CA
+                                          </span>
+                                        </span>
+                                      </span>
+                                    </div>
+                                    <div class="indexhtml-frame7">
+                                      <div class="indexhtml-frame5">
+                                        <span class="indexhtml-text05">
+                                          <span>
+                                            <span>Feel Unstoppable</span>
+                                            <br />
+                                            <span>In Your Own Skin</span>
+                                          </span>
+                                        </span>
+                                      </div>
+                                      <button class="indexhtml-button">
+                                        <div class="indexhtml-group1">
+                                          <span class="indexhtml-text10">
+                                            <span>Grab it here</span>
+                                          </span>
+                                        </div>
+                                      </button>
+                                    </div>
+                                  </div>
+                                  <img
+                                    alt="image3595"
+                                    src="https://github.com/Kasei7/Sephora-spec-/blob/main/image%203.png?raw=true"
+                                    class="indexhtml-image3"
+                                  />
+                                </div>
+                              </div>
+                            </div>
+                            <div class="indexhtml-group21">
+                              <div class="indexhtml-group23">
+                                <div class="indexhtml-group20">
+                                  <img
+                                    alt="Logo5100"
+                                    src="https://github.com/Kasei7/Sephora-spec-/blob/main/Logo.png?raw=true"
+                                    
+                                    class="indexhtml-logo"
+                                  />
+                                  <div class="indexhtml-group16">
+                                    <img
+                                      alt="image2599"
+                                      src="https://github.com/Kasei7/Sephora-spec-/blob/main/Lipstick.png?raw=true"
+                                      class="indexhtml-image2"
+                                    />
+                                  </div>
+                                </div>
+                                <div class="indexhtml-frame6"></div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                    <div class="index-frame12">
-                      <span class="index-text2"><span>Shawna Holmes</span></span>
-                    </div>
-                    <div class="index-frame13">
-                      <span class="index-text4"><span>UX DESIGN</span></span>
-                    </div>
-                    <div class="index-frame15">
-                      <span class="index-text6">
-                        <span>Email Developer</span>
+                  </div>
+                </div>
+                <div class="indexhtml-frame17">
+                  <span class="indexhtml-text12">
+                    Sephora Responsive Landing Page Case Study
+                  </span>
+                </div>
+                <img
+                  alt="image47107"
+                  src="/playground_assets/image47107-9i96-200h.png"
+                  class="indexhtml-image4"
+                />
+                <div class="indexhtml-frame18">
+                  <span class="indexhtml-text13"><span>The Research</span></span>
+                </div>
+                <div class="indexhtml-frame19">
+                  <span class="indexhtml-text15">
+                    <span>Red lipstick is known to symbol strength</span>
+                    <br />
+                    <span>
+                      Lipstick lover’s the look isn’t completed until a lipstick
+                      is on
+                    </span>
+                    <br />
+                    <span>
+                      Celebrity quotes about lipstick used for inspiration
+                    </span>
+                  </span>
+                  <div class="indexhtml-frame21">
+                    <span class="indexhtml-text21">
+                      <span>
+                        <span></span>
+                        <br />
+                        <span>Branding</span>
+                      </span>
+                    </span>
+                  </div>
+                  <div>
+                    <span class="indexhtml-text26">
+                      <span>
+                        <span>Black background , white</span>
+                        <br />
+                        <span>font</span>
+                        <br />
+                        <span></span>
+                        <br />
+                        <span>Sephora want’s women to be</span>
+                        <br />
+                        <span>fearless and bold with beauty</span>
+                        <br />
+                        <span>and life</span>
+                        <br />
+                        <span>Celebrates differences</span>
+                        <br />
+                        <span>They have classes that build</span>
+                        <br />
+                        <span>confidende</span>
+                        <br />
+                        <span></span>
+                        <br />
+                        <span>Black and white is simple in</span>
+                        <br />
+                        <span>styling, but classy in statement</span>
+                        <br />
+                        <span></span>
+                        <br />
+                        <span>
+                          To align with all these things need a simple concept in
+                          design, but bold when it comes together
+                        </span>
+                        <br />
+                        <span></span>
+                        <br />
+                        <span></span>
+                        <br />
+                        <span></span>
+                        <br />
+                        <span></span>
+                      </span>
+                    </span>
+                  </div>
+                  <div class="indexhtml-frame22"></div>
+                  <div class="indexhtml-frame3">
+                    <div class="indexhtml-frame51"></div>
+                    <div class="indexhtml-frame41">
+                      <span class="indexhtml-text63">
+                        <span>Hire Me</span>
+                        <br />
                       </span>
                     </div>
                   </div>
@@ -46,5 +195,3 @@
     </div>
   </div>
   
-</body>
-</html>
